--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 
 <body>
 
+    <main class="main-layout" id="mainLayout">
+        <h1 class="main-title" id="idTitle"></h1>
+        <section class="section-main" id="idSectionMain">
+            <p class="text-one" id="idTextOne"></p>
+            <p class="text-two" id="idTextTwo"></p>
+            <p class="text-three" id="idTextThree"></p>
+
+            <input id="idInputText" type="text" placeholder="Text Here">
+        </section>
+    </main>
+
     <script src="./index.js"></script>
 </body>
 
