--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p class="text-two" id="idTextTwo"></p>
             <p class="text-three" id="idTextThree"></p>
 
-            <input id="idInputText" type="text" placeholder="Text Here">
+            <input id="idInputText" class="input-text" type="text" placeholder="Text Here">
         </section>
     </main>
 
