manipulation of DOM

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <p class="text-two" id="idTextTwo"></p>
             <p class="text-three" id="idTextThree"></p>
 
+            <!-- <label for="idInputText"></label> -->
             <input id="idInputText" class="input-text" type="text" placeholder="Text Here">
         </section>
     </main>
