--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         <h1 class="main-title" id="idTitle"></h1>
         <section class="section-main" id="idSectionMain">
             <p class="text-one" id="idTextOne"></p>
-            <p class="text-two" id="idTextTwo"></p>
-            <p class="text-three" id="idTextThree"></p>
-
-            <label for="idInputText" class="label-click">Click<input id="idInputText" class="input-text" type="text" placeholder="Text Here" name="idInputText"></label>
+            <label for="idInputText" class="label-click">text: <input id="idInputText" class="input-text" type="text"
+                    placeholder="Text Here" name="idInputText"></label>
+            <label for="name" class="label-click">Text: <input type="text" id="name" class="input-text" name="name"
+                    placeholder="Here Text New!"></label>
+            <button class="btn button" id="idBtnClick">Click Me!</button>
         </section>
     </main>
 
