--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <label for="name" class="label-click">Text: <input type="text" id="name" class="input-text" name="name"
                     placeholder="Here Text New!"></label>
             <button class="btn button" id="idBtnClick">Click Me!</button>
+            <figure class="figure-image" id="idImage"></figure>
         </section>
     </main>
 
