--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
                     placeholder="Text Here" name="idInputText"></label>
             <label for="name" class="label-click">Text: <input type="text" id="name" class="input-text" name="name"
                     placeholder="Here Text New!"></label>
-            <button class="btn button" id="idBtnClick">Click Me!</button>
+            <div class="div-btn" id="btnDiv">
+                <button class="btn button" id="idBtnClick">Click Me!</button>
+                <button class="btn button-img" id="idBtnClickImg">AddImg</button>
+            </div>
             <figure class="figure-image" id="idImage"></figure>
         </section>
     </main>
