--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
         <h1 class="main-title" id="idTitle"></h1>
         <section class="section-main" id="idSectionMain">
             <p class="text-one" id="idTextOne"></p>
-            <label for="idInputText" class="label-click">text: <input id="idInputText" class="input-text" type="text"
-                    placeholder="Text Here" name="idInputText"></label>
-            <label for="name" class="label-click">Text: <input type="text" id="name" class="input-text" name="name"
-                    placeholder="Here Text New!"></label>
+            <label for="idInputText" class="label-click">User</label>
+            <input id="idInputText" class="input-text" type="text" placeholder="Text Here" name="idInputText">
+            <label for="name" class="label-click">$</label>
+            <input type="number" id="name" class="input-text" name="name" placeholder="Here Text New!">
+            <label for="discount" class="label-click">Discount</label>
+            <input type="number" id="discount" class="input-text" name="discount" placeholder="%">
+            <p class="text-input" id="idTextInput"></p>
             <div class="div-btn" id="btnDiv">
                 <button class="btn button" id="idBtnClick">Click Me!</button>
                 <button class="btn button-img" id="idBtnClickImg">AddImg</button>
