--- a/index.html
+++ b/index.html
@@ -17,19 +17,21 @@
     <main class="main-layout" id="mainLayout">
         <h1 class="main-title" id="idTitle"></h1>
         <section class="section-main" id="idSectionMain">
-            <p class="text-one" id="idTextOne"></p>
-            <label for="idInputText" class="label-click">User</label>
-            <input id="idInputText" class="input-text" type="text" placeholder="Text Here" name="idInputText">
-            <label for="name" class="label-click">$</label>
-            <input type="number" id="name" class="input-text" name="name" placeholder="Here Text New!">
-            <label for="discount" class="label-click">Discount</label>
-            <input type="number" id="discount" class="input-text" name="discount" placeholder="%">
-            <p class="text-input" id="idTextInput"></p>
-            <div class="div-btn" id="btnDiv">
-                <button class="btn button" id="idBtnClick">Click Me!</button>
-                <button class="btn button-img" id="idBtnClickImg">AddImg</button>
-            </div>
-            <figure class="figure-image" id="idImage"></figure>
+            <form action="" class="form" id="idForm">
+                <p class="text-one" id="idTextOne"></p>
+                <label for="idInputText" class="label-click">User</label>
+                <input id="idInputText" class="input-text" type="text" placeholder="Text Here" name="idInputText">
+                <label for="name" class="label-click">$</label>
+                <input type="number" id="name" class="input-text" name="name" placeholder="Here Text New!">
+                <label for="discount" class="label-click">Discount</label>
+                <input type="number" id="discount" class="input-text" name="discount" placeholder="%">
+                <p class="text-input" id="idTextInput"></p>
+                <div class="div-btn" id="btnDiv">
+                    <button class="btn button" type="button" id="idBtnClick">Click Me!</button>
+                    <button class="btn button-img" type="button" id="idBtnClickImg">AddImg</button>
+                </div>
+                <figure class="figure-image" id="idImage"></figure>
+            </form>
         </section>
     </main>
 
