--- a/public/landing/landing.html
+++ b/public/landing/landing.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="icon" href="../src/assets/icon/photo.png" type="image/icon" sizes="32x32">
     <link rel="stylesheet" href="./landingCSS.css">
     <title>Landing Page || APP Web Photo Search</title>
 </head>
