part one mobile Landing

--- a/public/landing/landing.html
+++ b/public/landing/landing.html
@@ -24,6 +24,21 @@
 <body>
 
     <main id="idMain" class="main-principal">
+        <section class="landing__photo">
+            <div class="landing__background">
+                <div class="landing__photoLogo">
+                    <figure class="photoLogo__figure">
+                        <img class="photoLogo__figure--img" src="/public/src/assets/icon/photo.png" alt="logo">
+                    </figure>
+                </div>
+                <div class="landing__photoTitle">
+                    <h1 id="idLandingTitle" class="landing__photoTitle--title">Start a New </br> Photography Adventure
+                    </h1>
+                </div>
+            </div>
+
+        </section>
+        <section class="landing-btn"></section>
 
     </main>
     <script src="./landing.js"></script>
