new landing page Mobile

--- a/public/landing/landing.html
+++ b/public/landing/landing.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="icon" href="../src/assets/icon/photo.png" type="image/icon" sizes="32x32">
-    <link rel="stylesheet" href="../landing/css/mediaQueeries.css">
+    <link rel="stylesheet" href="./css/mediaQueeries.css">
     <link rel="stylesheet" href="./landingCSS.css">
     <title>Landing Page || APP Web Photo Search</title>
 </head>
@@ -40,9 +40,9 @@
         </section>
         <section class="landing__btn" id="landingBtn">
             <div class="landing__footer" id="idLandingFooter">
-                <h2 class="landing__footer--title" id="idFooterTitle">Get Beautiful Photography and showing in your
-                    Social Media.</h2>
-                <button class="btn footer--btn">Sign In</button>
+                <!--  <h2 class="landing__footer--title" id="idFooterTitle">Get Beautiful Photography and showing in your
+                    Social Media.</h2> -->
+                <button class="btn footer--btn"><a href="../index.html">Sign In</a></button>
             </div>
 
         </section>
