--- a/public/landing/landing.html
+++ b/public/landing/landing.html
@@ -27,7 +27,7 @@
     <main id="idMain" class="main-principal">
         <section class="landing__photo">
             <div class="landing__background">
-                <div class="landing__photoLogo">
+                <div class="landing__photoLogo" id="idLandingPhoto">
                     <figure class="photoLogo__figure">
                         <img class="photoLogo__figure--img" src="/public/src/assets/icon/photo.png" alt="logo">
                     </figure>
