media queries Landing part Two

--- a/public/landing/landing.html
+++ b/public/landing/landing.html
@@ -40,9 +40,11 @@
         </section>
         <section class="landing__btn" id="landingBtn">
             <div class="landing__footer" id="idLandingFooter">
-                <!--  <h2 class="landing__footer--title" id="idFooterTitle">Get Beautiful Photography and showing in your
-                    Social Media.</h2> -->
-                <button class="btn footer--btn"><a href="../index.html">Sign In</a></button>
+                <h1 id="idLandingTitleTwo" class="landing__photoTitle--titleTwo">Start a New </br> Photography Adventure
+                </h1>
+                <h2 class="landing__footer--title" id="idFooterTitle">Get Beautiful Photography and showing in your
+                    Social Media.</h2>
+                <button class="btn footer--btn" id="btnFooter"><a href="../index.html">Sign In</a></button>
             </div>
 
         </section>
