--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./src/css/styleQueries.css">
     <link rel="stylesheet" href="./style.css">
     <title>Javascript Practice</title>
 </head>
