--- a/public/index.html
+++ b/public/index.html
@@ -16,16 +16,22 @@
 <body>
 
     <main class="main-layout" id="mainLayout">
-        <h1 class="main-title" id="idTitle"></h1>
+        <section class="section-mainOne" id="idSectionMainOne">
+            <div class="mainImg" id="idMainImg"></div>
+        </section>
+
         <section class="section-main" id="idSectionMain">
+            <h1 class="main-title" id="idTitle"></h1>
             <form action="" class="form" id="idForm">
                 <p class="text-one" id="idTextOne"></p>
-                <label for="idInputText" class="label-click">User</label>
-                <input id="idInputText" class="input-text" type="text" placeholder="Text Here" name="idInputText">
-                <label for="name" class="label-click">$</label>
-                <input type="number" id="name" class="input-text" name="name" placeholder="Here Text New!">
+                <label for="idInputText" class="label-click">User Name</label>
+                <input id="idInputText" class="input-text" type="text" placeholder="User Name" name="idInputText">
+                <label for="name" class="label-click">Suscription</label>
+                <input type="number" id="name" class="input-text" name="name" placeholder="Suscription">
                 <label for="discount" class="label-click">Discount</label>
                 <input type="number" id="discount" class="input-text" name="discount" placeholder="%">
+                <label for="password" class="label-click">Password</label>
+                <input type="text" class="input-text" id="idPassword" placeholder="Password" name="password">
                 <p class="text-input" id="idTextInput"></p>
                 <div class="div-btn" id="btnDiv">
                     <button class="btn button" type="button" id="idBtnClick">Click Me!</button>
