password change details

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./src/css/styleQueries.css">
     <link rel="stylesheet" href="./style.css">
     <title>Javascript Practice</title>
@@ -24,14 +27,21 @@
             <h1 class="main-title" id="idTitle"></h1>
             <form action="" class="form" id="idForm">
                 <p class="text-one" id="idTextOne"></p>
-                <label for="idInputText" class="label-click">User Name</label>
-                <input id="idInputText" class="input-text" type="text" placeholder="User Name" name="idInputText">
+                <div class="form__group" id="idFormGroup">
+                    <label for="idInputText" class="label-click">User Name</label>
+                    <div class="form__group--user" id="idFormGroupUser">
+                        <input id="idInputText" class="input-text" type="text" placeholder="User Name"
+                            name="idInputText">
+                        <i class="validation__estate fa-regular fa-circle-xmark"></i>
+                    </div>
+                    <p class="input__error--text" id="idInputError"></p>
+                </div>
                 <label for="name" class="label-click">Suscription</label>
                 <input type="number" id="name" class="input-text" name="name" placeholder="Suscription">
                 <label for="discount" class="label-click">Discount</label>
                 <input type="number" id="discount" class="input-text" name="discount" placeholder="%">
                 <label for="password" class="label-click">Password</label>
-                <input type="text" class="input-text" id="idPassword" placeholder="Password" name="password">
+                <input type="text" class="input-text" id="idPassword" placeholder="Password@email.com" name="password">
                 <p class="text-input" id="idTextInput"></p>
                 <div class="div-btn" id="btnDiv">
                     <button class="btn button" type="button" id="idBtnClick">Click Me!</button>
