--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,7 @@
                     </label>
                 </div>
                 <!-- Add DOM Js-->
+                <div class="form__error" id="idFormError"></div>
                 <p class="text-input" id="idTextInput"></p>
                 <!-- Add Buttons -->
                 <div class="div-btn" id="btnDiv">
