--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,7 @@
                 <div class="form__group" id="idFormTerms">
                     <label class="form__label">
                         <input type="checkbox" class="form__checkbox" name="terms" id="terms">
+                        Accept Terms and Conditions
                     </label>
                 </div>
                 <!-- Add DOM Js-->
