--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
                 <p class="text-input" id="idTextInput"></p>
                 <!-- Add Buttons -->
                 <div class="div-btn" id="btnDiv">
-                    <button class="btn button" type="button" id="idBtnClick">Click Me!</button>
+                    <button class="btn button" type="button" id="idBtnClick">Click Me</button>
                     <button class="btn button-img" type="button" id="idBtnClickImg">AddImg</button>
                 </div>
                 <figure class="figure-image" id="idImage"></figure>
