first test formulary finished

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
                     <p class="input__error--text" id="idInputError"></p>
                 </div>
                 <div class="form__group" id="idFormGroup">
-                    <label for="name" class="label-click">Subscription</label>
+                    <label for="name" class="label-click">$Subscription</label>
                     <div class="form__group--user" id="idFormGroupUser">
                         <input type="number" id="name" class="input-text" name="name" placeholder="Subscription">
                         <i class="validation__estate fa-regular fa-circle-xmark"></i>
