--- a/public/mobile/shopMobile.html
+++ b/public/mobile/shopMobile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/logos/favicon_yard_sale.svg" type="image/x-icon" sizes="16x16">
+    <link rel="icon" href="../src/logos/favicon_yard_sale.svg" type="image/x-icon" sizes="16x16">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 <body>
     <nav class="nav" id="idNav">
         <!-- === Menu === -->
-        <img src="../icons/icon_menu.svg" alt="menu" class="menu" id="idMenuBurger">
+        <img src="../src/assets/icon/icon_menu.svg" alt="menu" class="menu" id="idMenuBurger">
         <!-- ===  === Mobile Menu === === -->
         <div class="mobile-menu inactive" id="idMobileMenu">
             <ul>
@@ -64,7 +64,7 @@
         </div>
         <!-- === NavBar Left === -->
         <div class="navbar-left" id="idNavLeft">
-            <img src="../logos/logo_yard_sale.svg" alt="logo" class="logo">
+            <img src="../src/logos/favicon_yard_sale.svg" alt="logo" class="logo">
 
             <ul class="navbar__list--left">
                 <li>
@@ -92,10 +92,10 @@
             <ul class="navbar__list--right">
                 <li class="navbar-email" id="idNavEmail">platzi@example.com</li>
                 <li class="navbar-user" id="isNavUser">
-                    <figure><img src="/src/img/client1.png" class="nav-user" id="idNavUser"></figure>
+                    <figure><img src="../src/assets/img/client1.png" class="nav-user" id="idNavUser"></figure>
                 </li>
                 <li class="navbar-shopping-cart" id="idShoppingCart">
-                    <img src="../icons/icon_shopping_cart.svg" alt="shopping cart">
+                    <img src="../src/assets/icon/icon_shopping_cart.svg" alt="shopping cart">
                     <div>2</div>
                 </li>
             </ul>
