--- a/public/mobile/shopMobile.html
+++ b/public/mobile/shopMobile.html
@@ -95,13 +95,14 @@
                     <figure><img src="../src/assets/img/client1.png" class="nav-user" id="idNavUser"></figure>
                 </li>
                 <li class="navbar-shopping-cart" id="idShoppingCart">
-                    <img src="../src/assets/icon/icon_shopping_cart.svg" alt="shopping cart">
+                    <img src="../src/assets/icon/icon_shopping_cart.svg" alt="shopping cart" class="img-shopping"
+                        id="imageShopping">
                     <div>2</div>
                 </li>
             </ul>
         </div>
         <!-- ===  Product Detal === -->
-        <aside class="product-detail" id="idProductDetail">
+        <aside class="product-detail inactive" id="idProductDetail">
             <div class="title-container">
                 <img src="../src/assets/icon/flechita.svg" alt="arrow">
                 <p class="title">My order</p>
