essential menu changes

--- a/public/mobile/shopMobile.html
+++ b/public/mobile/shopMobile.html
@@ -101,7 +101,7 @@
                 </li>
             </ul>
         </div>
-        <!-- ===  Product Detal === -->
+        <!-- ===  Product Detail === -->
         <aside class="product-detail inactive" id="idProductDetail">
             <div class="title-container">
                 <img src="../src/assets/icon/flechita.svg" alt="arrow">
