--- a/public/mobile/shopMobile.html
+++ b/public/mobile/shopMobile.html
@@ -101,57 +101,6 @@
                 </li>
             </ul>
         </div>
-        <!-- ===  Product Detail === -->
-        <aside class="product-detail inactive" id="idProductDetail">
-            <div class="title-container">
-                <img src="../src/assets/icon/flechita.svg" alt="arrow">
-                <p class="title">My order</p>
-            </div>
-
-            <div class="my-order-content">
-                <div class="shopping-cart">
-                    <figure>
-                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                            alt="bike">
-                    </figure>
-                    <p>Bike</p>
-                    <p>$30,00</p>
-                    <img src="../src/assets/icon/icon_close.png" alt="close">
-                </div>
-
-                <div class="shopping-cart">
-                    <figure>
-                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                            alt="bike">
-                    </figure>
-                    <p>Bike</p>
-                    <p>$30,00</p>
-                    <img src="../src/assets/icon/icon_close.png" alt="close">
-                </div>
-
-                <div class="shopping-cart">
-                    <figure>
-                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                            alt="bike">
-                    </figure>
-                    <p>Bike</p>
-                    <p>$30,00</p>
-                    <img src="../src/assets/icon/icon_close.png" alt="close">
-                </div>
-
-                <div class="order">
-                    <p>
-                        <span>Total</span>
-                    </p>
-                    <p>$560.00</p>
-                </div>
-
-                <button class="primary-button">
-                    Checkout
-                </button>
-            </div>
-            </div>
-        </aside>
         <!-- === Desktop Menu === -->
         <div class="desktop-menu inactive" id="idDesktopMenu">
             <ul class="desktop__menu">
@@ -168,8 +117,60 @@
                 </li>
             </ul>
         </div>
-
     </nav>
+    <!-- ===  Product Detail === -->
+    <aside class="product-detail inactive" id="idProductDetail">
+        <div class="title-container">
+            <img src="../src/assets/icon/flechita.svg" alt="arrow">
+            <p class="title">My order</p>
+        </div>
+
+        <div class="my-order-content">
+            <div class="shopping-cart">
+                <figure>
+                    <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                        alt="bike">
+                </figure>
+                <p>Bike</p>
+                <p>$30,00</p>
+                <img src="../src/assets/icon/icon_close.png" alt="close">
+            </div>
+
+            <div class="shopping-cart">
+                <figure>
+                    <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                        alt="bike">
+                </figure>
+                <p>Bike</p>
+                <p>$30,00</p>
+                <img src="../src/assets/icon/icon_close.png" alt="close">
+            </div>
+
+            <div class="shopping-cart">
+                <figure>
+                    <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                        alt="bike">
+                </figure>
+                <p>Bike</p>
+                <p>$30,00</p>
+                <img src="../src/assets/icon/icon_close.png" alt="close">
+            </div>
+
+            <div class="order">
+                <p>
+                    <span>Total</span>
+                </p>
+                <p>$560.00</p>
+            </div>
+
+            <button class="primary-button">
+                Checkout
+            </button>
+        </div>
+        </div>
+    </aside>
+
+    <!-- === Products === -->
 
     <script src="./appShop.js"></script>
 </body>
