--- a/public/mobile/shopMobile.html
+++ b/public/mobile/shopMobile.html
@@ -117,7 +117,7 @@
                 </li>
             </ul>
         </div>
-    </nav>
+    </nav>ush 
     <!-- ===  Product Detail === -->
     <aside class="product-detail inactive" id="idProductDetail">
         <div class="title-container">
