all changes cards part 01

--- a/public/mobile/shopMobile.html
+++ b/public/mobile/shopMobile.html
@@ -117,7 +117,7 @@
                 </li>
             </ul>
         </div>
-    </nav>ush 
+    </nav>
     <!-- ===  Product Detail === -->
     <aside class="product-detail inactive" id="idProductDetail">
         <div class="title-container">
@@ -171,7 +171,25 @@
     </aside>
 
     <!-- === Products === -->
+    <main class="main-container" id="idMainContainer">
+        <div class="cards-container" id="idCardsContainer">
+            <!--  ===  cREATE & cALL aLL wITH jAVASCRIPT === -->
+            <!--  <div class="product-card">
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                    alt="">
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="../src/assets/icon/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>
+            </div> -->
 
+        </div>
+    </main>
     <script src="./appShop.js"></script>
 </body>
 
