--- a/public/mobile/shopMobile.html
+++ b/public/mobile/shopMobile.html
@@ -173,7 +173,7 @@
     <!-- === Products === -->
     <main class="main-container" id="idMainContainer">
         <div class="cards-container" id="idCardsContainer">
-            <!--  ===  cREATE & cALL aLL wITH jAVASCRIPT === -->
+            <!--  ===  CREATE & cALL aLL wITH jAVASCRIPT === -->
             <!--  <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                     alt="">
