--- a/public/mobile/shopMobile.html
+++ b/public/mobile/shopMobile.html
@@ -173,20 +173,7 @@
     <!-- === Products === -->
     <main class="main-container" id="idMainContainer">
         <div class="cards-container" id="idCardsContainer">
-            <!--  ===  CREATE & cALL aLL wITH jAVASCRIPT === -->
-            <!--  <div class="product-card">
-                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                    alt="">
-                <div class="product-info">
-                    <div>
-                        <p>$120,00</p>
-                        <p>Bike</p>
-                    </div>
-                    <figure>
-                        <img src="../src/assets/icon/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div> -->
+            <!--  ===  CREATE & cALL Card Product === -->
 
         </div>
     </main>
