--- a/public/mobile/shopMobile.html
+++ b/public/mobile/shopMobile.html
@@ -176,8 +176,24 @@
             <!--  ===  CREATE & cALL Card Product === -->
         </div>
         <!-- === Product Detail === -->
-        <aside class="products-details inactive" id="idProductDetail">
-            <!-- ===  Add Card Product Details === -->
+        <aside class="products-details inactive" id="idDetailProducts">
+            <div class="products-detail-closed" id="idProductClosed">
+                <img src="../src/assets/icon/icon_close.png" alt="close">
+            </div>
+            <img class="img-detail"
+                src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                alt="bike"" alt=" bike">
+            <div class="products-infos">
+                <p>$35,00</p>
+                <p>Bike</p>
+                <p>With its practical position, this bike also fulfills a decorative function, add your hall or
+                    workspace.
+                </p>
+                <button class="primary-button add-to-cart-button">
+                    <img src="../src/assets/icon/bt_add_to_cart.svg" alt="add to cart">
+                    Add to cart
+                </button>
+            </div>
         </aside>
     </main>
     <script src="./appShop.js"></script>
