overlay detail card

--- a/public/mobile/shopMobile.html
+++ b/public/mobile/shopMobile.html
@@ -196,6 +196,7 @@
             </div>
         </aside>
     </main>
+    <div class="overlay" id="idOverlay"></div>
     <script src="./appShop.js"></script>
 </body>
 
