--- a/public/mobile/shopMobile.html
+++ b/public/mobile/shopMobile.html
@@ -196,6 +196,17 @@
             </div>
         </aside>
     </main>
+    <footer id="idFooter" class="footer">
+        <div class="footer__logo" id="footerLogo">
+            <figure class="footer__logo--figure">
+                <img src="../src/logos/logo_yard_sale.svg" alt="" class="figure-img">
+            </figure>
+        </div>
+        <div class="footer__line"></div>
+        <div class="footer__copyright">
+            <p class="copyright__text">@CopyrightPlatziYardSale&DevelopChris04</p>
+        </div>
+    </footer>
     <div class="overlay" id="idOverlay"></div>
     <script src="./appShop.js"></script>
 </body>
